--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <h1 class="feynman__title">Метод Фейнмана</h1>
         <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
         <a href="#" class="feynman__link">Подробнее →</a>
-        <img src="./images/feynman.png" alt="Feynman" class="feynman__background">
+        <img src="./images/feynman.png" alt="Фейман" class="feynman__background">
       </section>
       <section class="kaufman">
         <h1 class="section-title_theme_dark">Принципы обучения</h1>
@@ -148,9 +148,9 @@
         <li class="footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <div class="footer__column-links">
-            <a href="#" class="footer__column-link"><img src="./images/youtube-icon.svg" alt="YouTube" class="footer__social-icon">YouTube</a>
+            <a href="#" class="footer__column-link"><img src="./images/youtube-icon.svg" alt="Ютуб" class="footer__social-icon">YouTube</a>
             <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon">ВКонтакте</a>
-            <a href="#" class="footer__column-link"><img src="./images/tiktok-icon.svg" alt="TikTok" class="footer__social-icon">TikTok</a>
+            <a href="#" class="footer__column-link"><img src="./images/tiktok-icon.svg" alt="Тикток" class="footer__social-icon">TikTok</a>
           </div>
         </li>
       </ul>
