внесена часть правок в styles до Кауфмана

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               Мы тренируемся решать однообразные задачи,
               чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
               Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__paragraph two-columns__paragraph_margin"><span class="two-columns__span-accent">
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">
               Вывод:</span> учиться тоже нужно уметь,
               но почему-то этому мало где учат. Что с этим делать?</p>
             <p class="two-columns__paragraph">
@@ -84,48 +84,48 @@
         <img src="./images/feynman.png" alt="Фейман" class="feynman__background">
       </section>
       <section class="kaufman">
-        <h1 class="section-title_theme_dark">Принципы обучения</h1>
-        <h2 class="section-subtitle_theme_dark">от Джоша Кауфмана</h2>
-        <lu class="table_theme_dark">
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">1</h3>
-            <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+        <h1 class="kaufman__section-title_theme_dark">Принципы обучения</h1>
+        <h2 class="kaufman__section-subtitle_theme_dark">от Джоша Кауфмана</h2>
+        <lu class="kaufman__table_theme_dark">
+          <li class="kaufman__table__cell_theme_dark">
+            <h3 class="kaufman__table__heading_theme_dark">1</h3>
+            <p class="kaufman__table__text_theme_dark">Выберите привлекательный проект.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">2</h3>
-            <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          <li class="kaufman__table__cell_theme_dark">
+            <h3 class="kaufman__table__heading_theme_dark">2</h3>
+            <p class="kaufman__table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">3</h3>
-            <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          <li class="kaufman__table__cell_theme_dark">
+            <h3 class="kaufman__table__heading_theme_dark">3</h3>
+            <p class="kaufman__table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">4</h3>
-            <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+          <li class="kaufman__table__cell_theme_dark">
+            <h3 class="kaufman__table__heading_theme_dark">4</h3>
+            <p class="kaufman__table__text_theme_dark">Разбейте навык на элементы.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">5</h3>
-            <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          <li class="kaufman__table__cell_theme_dark">
+            <h3 class="kaufman__table__heading_theme_dark">5</h3>
+            <p class="kaufman__table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">6</h3>
-            <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+          <li class="kaufman__table__cell_theme_dark">
+            <h3 class="kaufman__table__heading_theme_dark">6</h3>
+            <p class="kaufman__table__text_theme_dark">Устраните препятствия для занятий.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">7</h3>
-            <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+          <li class="kaufman__table__cell_theme_dark">
+            <h3 class="kaufman__table__heading_theme_dark">7</h3>
+            <p class="kaufman__table__text_theme_dark">Выделите специальное время для занятий.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">8</h3>
-            <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          <li class="kaufman__table__cell_theme_dark">
+            <h3 class="kaufman__table__heading_theme_dark">8</h3>
+            <p class="kaufman__table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">9</h3>
-            <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          <li class="kaufman__table__cell_theme_dark">
+            <h3 class="kaufman__table__heading_theme_dark">9</h3>
+            <p class="kaufman__table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">10</h3>
-            <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          <li class="kaufman__table__cell_theme_dark">
+            <h3 class="kaufman__table__heading_theme_dark">10</h3>
+            <p class="kaufman__table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </lu>
         <img src="./images/kaufman-triangle.svg" alt="треугольник" class="kaufman__triangle">
