--- a/index.html
+++ b/index.html
@@ -7,20 +7,19 @@
   <link rel="stylesheet" href="./styles/normalize.css">
   <link rel="stylesheet" href="./styles/style.css">
 </head>
-<body>
-  <div class="page">
+<body class="page">
     <header class="header">
       <img src="./images/logo_place_header.svg" alt="логотип Яндекс Практикум" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
-      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать →</a></h2>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать →</a></p>
       <img src="./images/header-image.png" alt="Опять двойка" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
-        <lu class="two-columns">
-          <h1 class="two-columns__brief">Главные проблемы в обучении</h1>
-          <li class="two-columns__main-text">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
               Ни в школе, ни в институте нас не учат тому,
               как правильно изучать материал. Мы готовимся к экзаменам и учим билеты.
@@ -34,13 +33,13 @@
               Конкретные техники и упражнения помогают изменить
               подход к обучению, сделать его эффективным и захватывающим.
               Эти же техники применяются на примере обучения в Практикуме.</p>
-            </li>
-          </lu>
+            </div>
+          </div>
       </section>
       <section class="digits">
-        <h1 class="section-title">Цифры и факты</h1>
-        <h2 class="section-subtitle">Про учёбу и мозг</h2>
-        <lu class="table">
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <ul class="table">
           <li class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
@@ -75,18 +74,18 @@
             <h3 class="table__heading">1889 год</h3>
             <p class="table__text">Открытие условного рефлекса</p>
           </li>
-        </lu>
+        </ul>
       </section>
       <section class="feynman">
-        <h1 class="feynman__title ">Метод Фейнмана</h1>
-        <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
+        <h2 class="feynman__title ">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее →</a>
         <img src="./images/feynman.png" alt="Фейман" class="feynman__background">
       </section>
       <section class="kaufman">
-        <h1 class="kaufman__section-title section-title section-title_theme_dark">Принципы обучения</h1>
-        <h2 class="kaufman__section-subtitle section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h2>
-        <lu class="kaufman__table table">
+        <h2 class="kaufman__section-title section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="kaufman__section-subtitle section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <ul class="kaufman__table table">
           <li class="kaufman__table__cell table__cell table__cell_theme_dark">
             <h3 class="kaufman__table__heading table__heading table__heading_theme_dark">1</h3>
             <p class="kaufman__table__text table__text table__text_theme_dark">Выберите привлекательный проект.</p>
@@ -127,34 +126,37 @@
             <h3 class="kaufman__table__heading table__heading table__heading_theme_dark">10</h3>
             <p class="kaufman__table__text table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
-        </lu>
-        <img src="./images/kaufman-triangle.svg" alt="треугольник" class="kaufman__triangle">
+        </ul>
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
-      <ul class="footer__columns">
-        <li class="footer__column_content_copyright">
-          <img src="./images/logo_place_footer.svg" alt="логотип Яндекс Практикум" class="logo logo_place_footer">
-          <p class="footer__author">&copy Виктор Абанькин</p>
-        </li>
-        <li class="footer__column_content_info">
-          <h2 class="footer__column-heading">О Практикуме</h2>
-          <div class="footer__column-links">
-            <a href="#" class="footer__column-link">Главная</a>
-            <a href="#" class="footer__column-link">Концепция</a>
-            <a href="#" class="footer__column-link">Наставники</a>
-          </div>
-        </li>
-        <li class="footer__column_content_social">
-          <h3 class="footer__column-heading">Соцсети</h3>
-          <div class="footer__column-links">
-            <a href="#" class="footer__column-link"><img src="./images/youtube-icon.svg" alt="Ютуб" class="footer__social-icon">YouTube</a>
-            <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon">ВКонтакте</a>
-            <a href="#" class="footer__column-link"><img src="./images/tiktok-icon.svg" alt="Тикток" class="footer__social-icon">TikTok</a>
-          </div>
-        </li>
-      </ul>
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <img src="./images/logo_place_footer.svg" alt="логотип Яндекс Практикум" class="footer__logo footer__logo_place_footer">
+          <p class="footer__column_author">&copy; Виктор Абанькин</p>
+        </div>
+        <div class="footer__column_content_info">
+          <h3 class="footer__column_column-heading">О Практикуме</h3>
+          <nav>
+            <ul class="footer__column-links">
+              <li><a href="#" class="footer__column-link">Главная</a></li>
+              <li><a href="#" class="footer__column-link">Концепция</a></li>
+              <li><a href="#" class="footer__column-link">Наставники</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="footer__column_content_social">
+          <h3 class="footer__column_column-heading">Соцсети</h3>
+          <nav>
+            <ul class="footer__column-links">
+              <li><a href="#" class="footer__column-link"><img src="./images/youtube-icon.svg" alt="Ютуб" class="footer__social-icon">YouTube</a></li>
+              <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon">ВКонтакте</a></li>
+              <li><a href="#" class="footer__column-link"><img src="./images/tiktok-icon.svg" alt="Тикток" class="footer__social-icon">TikTok</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </footer>
-  </div>
 </body>
 </html>
