ПР2 после правок

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="./images/logo_place_header.svg" alt="логотип Яндекс Практикум" class="logo logo_place_header">
     <h1 class="header__title">Научиться учиться</h1>
     <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-      <a href="#" class="header__link">Узнать →</a>
+      <a href="#" class="header__link" target="_blank">Узнать &rarr;</a>
     </p>
     <img src="./images/header-image.png" alt="Опять двойка" class="header__main-illustration">
     <div class="header__square-pic rotation"></div>
@@ -43,32 +43,33 @@
       <h2 class="section-title">Техники обучения</h2>
       <p class="section-subtitle">Пять практик от Барбары Оакли</p>
       <ul class="cards">
-        <li class="item">
-          <img src="./images/cards-attention.png" alt="Внимание" class="item__image">
-          <h3 class="item__title">Два вида внимания</h3>
-          <p class="item__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.
+        <li class="cards__item">
+          <img src="./images/cards-attention.png" alt="Внимание" class="cards__image">
+          <h3 class="cards__title">Два вида внимания</h3>
+          <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
+            мышление.
           </p>
         </li>
-        <li class="item">
-          <img src="./images/cards-recall.png" alt="Рекол" class="item__image">
-          <h3 class="item__title">Recall</h3>
-          <p class="item__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+        <li class="cards__item">
+          <img src="./images/cards-recall.png" alt="Рекол" class="cards__image">
+          <h3 class="cards__title">Recall</h3>
+          <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
         </li>
-        <li class="item">
-          <img src="./images/cards-interliving.png" alt="Интерливинг" class="item__image">
-          <h3 class="item__title">Интерливинг</h3>
-          <p class="item__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+        <li class="cards__item">
+          <img src="./images/cards-interliving.png" alt="Интерливинг" class="cards__image">
+          <h3 class="cards__title">Интерливинг</h3>
+          <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
         </li>
-        <li class="item">
-          <img src="./images/cards-question.png" alt="Вопросы" class="item__image">
-          <h3 class="item__title">Вопросы</h3>
-          <p class="item__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
+        <li class="cards__item">
+          <img src="./images/cards-question.png" alt="Вопросы" class="cards__image">
+          <h3 class="cards__title">Вопросы</h3>
+          <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
             волнует.</p>
         </li>
-        <li class="item">
-          <img src="./images/cards-competence.png" alt="Компетенция" class="item__image">
-          <h3 class="item__title">Иллюзия компетентности</h3>
-          <p class="item__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
+        <li class="cards__item">
+          <img src="./images/cards-competence.png" alt="Компетенция" class="cards__image">
+          <h3 class="cards__title">Иллюзия компетентности</h3>
+          <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
             владеете новой темой.</p>
         </li>
       </ul>
@@ -77,16 +78,12 @@
       <h2 class="section-title">Видео нa TED</h2>
       <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
       <div class="video__iframes">
-        <div class="video__iframe">
-          <iframe width="515" height="315" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
-        <div class="video__iframe">
-          <iframe width="515" height="315" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
+        <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
       </div>
     </section>
     <section class="oakley">
@@ -106,7 +103,7 @@
     <section class="feynman">
       <h2 class="feynman__title ">Метод Фейнмана</h2>
       <p class="feynman__subtitle">Выучить и не забыть.</p>
-      <a href="#" class="feynman__link">Подробнее →</a>
+      <a href="#" class="feynman__link" target="_blank">Подробнее &rarr;</a>
       <img src="./images/feynman.png" alt="Фейман" class="feynman__background">
     </section>
     <section class="digits">
@@ -153,15 +150,18 @@
       <div class="khan__container">
         <p class="khan__author">Салман Хан</p>
         <h2 class="khan__title">Весь мир — школа</h2>
-        <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
-          миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
-          смогут
-          получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+        <blockquote class="khan__quote"> <!-- В доке указано, что цитата должна содержать в себе параграф -->
+          <p> Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+            миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
+            смогут
+            получить навыки и знания, которые приносят успех в школе, карьере и жизни.
+          </p>
+        </blockquote>
         <p class="khan__quote-author">Джордж Лукас</p>
         <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
         <div class="khan__book-container">
           <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Книга'Весь мир — Школа'">
-          <a href="#" class="khan__buy-link">Купить →</a>
+          <a href="#" class="khan__buy-link" target="_blank">Купить &rarr;</a>
         </div>
       </div>
     </section>
@@ -217,13 +217,13 @@
       <h2 class="section-title">Полезные ресурсы</h2>
       <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
       <ul class="resources__logo-zone">
-        <li><a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" alt="Арзамас"
+        <li><a href="#" class="resources__link" target="_blank"><img src="./images/logo/resources-arzamas.svg"
+              alt="Арзамас" class="resources__logo"></a></li>
+        <li><a href="#" class="resources__link" target="_blank"><img src="./images/logo/resources-n1.svg" alt="Нплюс1"
               class="resources__logo"></a></li>
-        <li><a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" alt="Нплюс1"
-              class="resources__logo"></a></li>
-        <li><a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" alt="Стрелка"
-              class="resources__logo"></a></li>
-        <li><a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" alt="Полка"
+        <li><a href="#" class="resources__link" target="_blank"><img src="./images/logo/resources-strelka.svg"
+              alt="Стрелка" class="resources__logo"></a></li>
+        <li><a href="#" class="resources__link" target="_blank"><img src="./images/logo/resources-polka.svg" alt="Полка"
               class="resources__logo"></a></li>
       </ul>
     </section>
@@ -248,11 +248,11 @@
         <h3 class="footer__column-heading">Соцсети</h3>
         <nav>
           <ul class="footer__column-links">
-            <li><a href="#" class="footer__column-link"><img src="./images/youtube-icon.svg" alt="Ютуб"
+            <li><a href="#" class="footer__column-link" target="_blank"><img src="./images/youtube-icon.svg" alt="Ютуб"
                   class="footer__social-icon">YouTube</a></li>
-            <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="ВКонтакте"
-                  class="footer__social-icon">ВКонтакте</a></li>
-            <li><a href="#" class="footer__column-link"><img src="./images/tiktok-icon.svg" alt="Тикток"
+            <li><a href="#" class="footer__column-link" target="_blank"><img src="./images/vk_color_white.svg"
+                  alt="ВКонтакте" class="footer__social-icon">ВКонтакте</a></li>
+            <li><a href="#" class="footer__column-link" target="_blank"><img src="./images/tiktok-icon.svg" alt="Тикток"
                   class="footer__social-icon">TikTok</a></li>
           </ul>
         </nav>
